  first place.

* Remove Vend::Server::http_log_msg which is only called for SOAP accesses.

* Create way to specify that local override of a global tag should not cause
  an error message.

  		Limit  override_tag   tag1 tag2 tag3

UserTag
-------

* Add option to specify useragent to get_url tag.

UI
--

* customer_mailing: Add full path for sendmail in batch, 
  using $Config->{SendMailProgram}, weed duplicate email addresses, 
  sort by email instead of last name 

* let [row_edit] honor spread_width meta setting

Foundation
----------

* Remove "default" column from mv_metadata.asc, as it is not used anywhere.
  This allows the addition of mv_metadata to MySQL, as otherwise the
  column name "default" prevents the creation of the table.

TableEditor
-----------

* Apply Paul Vinciguerra's patch to number of rows thing, which gets multiple row
  tabs working on the tabbed display if not in ui_style mode.

Menu
----

* Enhance flyout menus to have a lined-up image indicating a submenu.
  The parameter is an image name (if not beginning with <) or
  arbitrary HTML (if first character is <).

  Use by passing the parameter:

  	  submenu_image_right="[var IMAGE_DIR]/right.gif"

  or

  	  submenu_image_left="[image src=asterisk.gif]"

  or to fake it out with some text:

	submenu_image_right=|
			<span style="font-size: smaller !important"> &nbsp; (more)</span>
						|

Options
-------

* Add blank_label="--select--" option to [item-options], allows development
  of code to enforce option selection.

i18n
----

* "make localefiles" ignores CVS conflict files now

* Japanese UI translation update from Murahashi <murahashi@ayayu.com>.

Debian
------

* Add libhtml-parser-perl to Build-Depends to keep HTML::Entities
  module out of the package (Closes: #224435, thanks to Henrik Holmboe
  <elements@hack.se> for the bug report)


------------------------------------------------------------------------------

(end)