@@ -1,6 +1,6 @@
 # Vend::Options::Old48 - Interchange 4.8 compatible product options
 #
-# $Id: Old48.pm,v 1.4 2003-12-04 03:52:18 mheins Exp $
+# $Id: Old48.pm,v 1.5 2004-01-26 21:51:12 racke Exp $
 #
 # Copyright (C) 2002-2003 Mike Heins <mikeh@perusion.net>
 # Copyright (C) 2002-2003 Interchange Development Group <interchange@icdevgroup.org>
@@ -23,7 +23,7 @@
 
 package Vend::Options::Old48;
 
-$VERSION = substr(q$Revision: 1.4 $, 10);
+$VERSION = substr(q$Revision: 1.5 $, 10);
 
 =head1 NAME
 
@@ -388,7 +388,7 @@ sub display_options_simple {
 	my $q = "SELECT " . join (",", @rf) . " FROM $tname where $fsel = $rsel";
 
 	if(my $rsort = find_sort($opt)) {
-		$q .= $rsort;
+		$q .= " $rsort";
 	}
 #::logDebug("tag_options simple query: $q");
 
